--- a/setting_config.yaml
+++ b/setting_config.yaml
@@ -11,10 +11,10 @@ wjx_id: "https://www.wjx.top/jq/99236678.aspx"
 target_time: "2020-11-29 19:00:00"
 
 users:
-  - name: "顾东洲"
-    phone: "18817618823"
-    id: "20721985"
-    card_id: "341226199908103718"
+  - name: "张母牛"
+    phone: "18817618xxx"
+    id: "xxxxxxxx"
+    card_id: "xxxxxxxxxxxxxxxx"
     major: "自动化"
 
 #  - name: "张母牛"
